--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="./logoAW.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />s
+    <meta name="theme-color" content="#000000" />
     <meta
       name="This is agus wibawa portfolio"
       content="Web site created using create-react-app"
