--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
   <head>
     <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-403895833"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'AW-403895833');
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PVVT1FV5NC"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-PVVT1FV5NC');
     </script>
     <meta charset="utf-8" />
     <link rel="icon" href="./logoAW.png" />
