--- a/public/index.html
+++ b/public/index.html
@@ -11,15 +11,15 @@
       gtag('config', 'G-PVVT1FV5NC');
     </script>
     <meta charset="utf-8" />
-    <link rel="icon" href="/logoAW.webp" />
+    <link rel="icon" href="%PUBLIC_URL%/logoAW.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="This is agus wibawa portfolio"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="/logoAW.webp" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logoAW.webp" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Agus Wibawa</title>
   </head>
   <body>
